<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.nationalparkse_passport.RegisterActivity">

    <RelativeLayout
        android:id="@+id/activity_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:text="@string/fn_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/profile_imageview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:id="@+id/fn_textview"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/fn_hint"
            android:hint="@string/fn_hint"
            android:textSize="14sp"
            android:layout_below="@+id/fn_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/user_textview"
            android:layout_width="360dp"
            android:layout_height="20dp"
            android:text="@string/user_label"
            android:textSize="18sp"
            android:layout_below="@+id/fn_hint"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/name_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:layout_below="@+id/user_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/email_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail_label"
            android:textSize="18sp"
            android:layout_below="@+id/name_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/email_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/e_mailhint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:layout_below="@+id/email_textview"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <EditText
            android:id="@+id/pass_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/password123_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:layout_below="@+id/password"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/cfp_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/confirm_password_label"
            android:textSize="18sp"
            android:layout_below="@+id/pass_editText"
            android:layout_alignLeft="@+id/password"
            android:layout_alignStart="@+id/password"
            android:layout_marginTop="16dp" />

        <EditText
            android:id="@+id/cfp_editText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/confrim_password_hint"
            android:inputType="textPersonName"
            android:textSize="14sp"
            android:layout_below="@+id/cfp_textView"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <TextView
            android:id="@+id/password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/password_label"
            android:textSize="18sp"
            android:layout_below="@+id/email_editText"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="16dp" />

        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:srcCompat="@drawable/userrrrrr111111"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/profile_imageview"
            android:src="@drawable/userrrrrr111111" />

        <Button
            android:id="@+id/loginfb_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/login_with_facebook_bt"
            android:layout_below="@+id/cfp_editText"
            android:layout_toRightOf="@+id/pass_editText"
            android:layout_toEndOf="@+id/pass_editText" />

        <Button
            android:id="@+id/register_button"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/register_bt"
            android:layout_alignParentTop="true"
            android:layout_alignLeft="@+id/profile_imageview"
            android:layout_alignStart="@+id/profile_imageview" />

    </RelativeLayout>
</ScrollView>
